--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-logger": "2.4.0",
+    "redux-saga": "^0.16.2",
     "redux-thunk": "^2.3.0"
   },
   "lint-staged": {
